--- a/maplibre_gl/pubspec.yaml
+++ b/maplibre_gl/pubspec.yaml
@@ -14,15 +14,8 @@ dependencies:
   flutter:
     sdk: flutter
   maplibre_gl_platform_interface:
-    git:
-      url: https://github.com/danieljosua1/flutter-maplibre-gl.git
-      ref: clearAmbientCache
-      path: maplibre_gl_platform_interface
-  maplibre_gl_web:
-    git:
-      url: https://github.com/danieljosua1/flutter-maplibre-gl.git
-      ref: clearAmbientCache
-      path: maplibre_gl_web
+    path: ../maplibre_gl_platform_interface
+
 
 dev_dependencies:
   very_good_analysis: ^5.0.0
