--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: maplibre_gl_workspace
 publish_to: 'none'
-repository: https://github.com/maplibre/flutter-maplibre-gl
+repository: https://github.com/danieljosua1/flutter-maplibre-gl.git
 issue_tracker: https://github.com/maplibre/flutter-maplibre-gl/issues
 
 environment:
